deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mservice-deployment
  labels:
    app: mservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mservice
  template:
    metadata:
      labels:
        app: mservice
    spec:
      volumes:
        - name: secrets
          secret:
            secretName: server-tls
      containers:
        - name: server
          image: tscolari/mservice:latest
          command: ["server"]
          volumeMounts:
            - name: secrets
              readOnly: true
              mountPath: "/etc/tls-secrets"
          ports:
            - containerPort: 4443
              protocol: "TCP"
              name: "grpc"
            - containerPort: 9090
              protocol: "TCP"
              name: "health"
          livenessProbe:
            httpGet:
              path: /health_check
              port: 9090
            initialDelaySeconds: 5
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /health_check
              port: 9090
            initialDelaySeconds: 10
            timeoutSeconds: 5
