deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mservice
  labels:
    app: mservice
spec:
  ports:
  - port: 443
    targetPort: 4443
  type: ClusterIP
  selector:
    app: mservice
